# 2048-remake

./: .gitignore  2048.sln  2048.vcxproj  2048.vcxproj.filters  CMakeLists.txt  LICENSE  Main.cpp  README.md  build-run.sh  build.sh  stdafx.h
2048/: 2048.vcxproj  2048.vcxproj.filters  Main.cpp
CMake/modules/: FindJsoncpp.cmake
assets/: Scoreboard.pdn  cursor.pdn  menu_button.pdn  tiles.pdn
assets/schemes/: default.json
include/: Aliases.hpp  Application.hpp  Assets.hpp  Common.hpp  Component.hpp  Config.hpp  Configuration.hpp  Easing.hpp  Embedded.hpp  Game.hpp  GameBase.hpp  GameObject.hpp  Grid.hpp  NinePatch.hpp  Pch.hpp  ResourceHolder.hpp  ResourceHolder.inl  ResourceIdentifiers.hpp  SchemeManager.hpp  ScoreManager.hpp  Session.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  Task.hpp  Tile.hpp  TileManager.hpp
include/Components/: GridComponent.hpp  ScoreBoardComponent.hpp  TileComponent.hpp
include/States/: GameState.hpp  MenuState.hpp
save/: session.json  statistics.json
source/: Application.cpp  Assets.cpp  CMakeLists.txt  Component.cpp  Config.cpp  Configuration.cpp  Game.cpp  GameBase.cpp  GameObject.cpp  Grid.cpp  Main.cpp  NinePatch.cpp  ScoreManager.cpp  State.cpp  StateStack.cpp  Tile.cpp  TileManager.cpp
source/Components/: GridComponent.cpp  ScoreBoardComponent.cpp  TileComponent.cpp
source/States/: GameState.cpp  MenuState.cpp
